--- a/freefire.html
+++ b/freefire.html
@@ -33,7 +33,7 @@
 
 <section class="offers">
   <div class="offer">
-    <img src="https://staticg.sportskeeda.com/editor/2023/03/8c946-16779375872038-1920.jpg" alt="100 Diamonds">
+    <img src="image/Freefire.jpg" alt="100 Diamonds">
     <h3>100 Diamonds</h3>
     <p>السعر: 50 أوقية</p>
     <button onclick="showForm(this, 'Free Fire', '100 Diamonds')">اطلب الآن</button>
@@ -52,7 +52,7 @@
   </div>
 
   <div class="offer">
-    <img src="https://wallpapercave.com/wp/wp8785781.jpg" alt="310 Diamonds">
+    <img src="image/Freefire.jpg" alt="310 Diamonds">
     <h3>310 Diamonds</h3>
     <p>السعر: 145 أوقية</p>
     <button onclick="showForm(this, 'Free Fire', '310 Diamonds')">اطلب الآن</button>
@@ -71,7 +71,7 @@
   </div>
 
   <div class="offer">
-    <img src="https://wallpapercave.com/wp/wp8785785.jpg" alt="520 Diamonds">
+    <img src="image/Freefire.jpg" alt="520 Diamonds">
     <h3>520 Diamonds</h3>
     <p>السعر: 235 أوقية</p>
     <button onclick="showForm(this, 'Free Fire', '520 Diamonds')">اطلب الآن</button>
@@ -90,7 +90,7 @@
   </div>
 
   <div class="offer">
-    <img src="https://wallpapercave.com/wp/wp8785783.jpg" alt="1060 Diamonds">
+    <img src="image/Freefire.jpg" alt="1060 Diamonds">
     <h3>1060 Diamonds</h3>
     <p>السعر: 460 أوقية</p>
     <button onclick="showForm(this, 'Free Fire', '1060 Diamonds')">اطلب الآن</button>
@@ -109,7 +109,7 @@
   </div>
 
   <div class="offer">
-    <img src="https://wallpapercave.com/wp/wp8785784.jpg" alt="2180 Diamonds">
+    <img src="image/Freefire.jpg" alt="2180 Diamonds">
     <h3>2180 Diamonds</h3>
     <p>السعر: 920 أوقية</p>
     <button onclick="showForm(this, 'Free Fire', '2180 Diamonds')">اطلب الآن</button>
