--- a/itunes.html
+++ b/itunes.html
@@ -106,27 +106,27 @@
 
 <section class="offers">
     <div class="offer-card">
-        <img src="https://store.storeimages.cdn-apple.com/4668/as-images.apple.com/is/itunes-gift-card-5usd">
+        <img src="image/Itunes.jpg">
         <h3>بطاقة $5</h3>
         <p>190 أوقية</p>
     </div>
     <div class="offer-card">
-        <img src="https://store.storeimages.cdn-apple.com/4668/as-images.apple.com/is/itunes-gift-card-10usd">
+        <img src="image/Itunes.jpg">
         <h3>بطاقة $10</h3>
         <p>380 أوقية</p>
     </div>
     <div class="offer-card">
-        <img src="https://store.storeimages.cdn-apple.com/4668/as-images.apple.com/is/itunes-gift-card-15usd">
+        <img src="image/Itunes.jpg">
         <h3>بطاقة $15</h3>
         <p>570 أوقية</p>
     </div>
     <div class="offer-card">
-        <img src="https://store.storeimages.cdn-apple.com/4668/as-images.apple.com/is/itunes-gift-card-25usd">
+        <img src="image/Itunes.jpg">
         <h3>بطاقة $25</h3>
         <p>950 أوقية</p>
     </div>
     <div class="offer-card">
-        <img src="https://store.storeimages.cdn-apple.com/4668/as-images.apple.com/is/itunes-gift-card-50usd">
+        <img src="image/Itunes.jpg">
         <h3>بطاقة $50</h3>
         <p>1900 أوقية</p>
     </div>
