--- a/pubg.html
+++ b/pubg.html
@@ -33,7 +33,7 @@
 
 <section class="offers">
   <div class="offer">
-    <img src="https://cdn.gamerbraves.com/2021/09/pubg-mobile-uc.jpg" alt="60 UC">
+    <img src="image/UC.jpg" alt="60 UC">
     <h3>60 UC</h3>
     <p>السعر: 55 أوقية</p>
     <button onclick="showForm(this, 'PUBG', '60 UC')">اطلب الآن</button>
@@ -52,7 +52,7 @@
   </div>
 
   <div class="offer">
-    <img src="https://i.ytimg.com/vi/VGQ_NyAK7bE/maxresdefault.jpg" alt="325 UC">
+    <img src="image/UC.jpg" alt="325 UC">
     <h3>325 UC</h3>
     <p>السعر: 270 أوقية</p>
     <button onclick="showForm(this, 'PUBG', '325 UC')">اطلب الآن</button>
@@ -71,7 +71,7 @@
   </div>
 
   <div class="offer">
-    <img src="https://img.gurugamer.com/resize/740x-/2020/06/22/pubg-uc-purchase-9747.jpg" alt="660 UC">
+    <img src="image/UC.jpg" alt="660 UC">
     <h3>660 UC</h3>
     <p>السعر: 540 أوقية</p>
     <button onclick="showForm(this, 'PUBG', '660 UC')">اطلب الآن</button>
@@ -90,7 +90,7 @@
   </div>
 
   <div class="offer">
-    <img src="https://cdn-products.eneba.com/resized-products/6PtSuFlhDwhnK8aa6v8O2HT0Ue1S8hU1oZIkCpAn0-8_350x200_1x-0.jpeg" alt="1800 UC">
+    <img src="image/UC.jpg" alt="1800 UC">
     <h3>1800 UC</h3>
     <p>السعر: 1460 أوقية</p>
     <button onclick="showForm(this, 'PUBG', '1800 UC')">اطلب الآن</button>
@@ -109,7 +109,7 @@
   </div>
 
   <div class="offer">
-    <img src="https://cdn-products.eneba.com/resized-products/3S6z0XlHj9B8YZyG2FzYF8w3vQms7j-Xo0Z8Rzj8a0c_350x200_1x-0.jpeg" alt="3850 UC">
+    <img src="image/UC.jpg" alt="3850 UC">
     <h3>3850 UC</h3>
     <p>السعر: 2920 أوقية</p>
     <button onclick="showForm(this, 'PUBG', '3850 UC')">اطلب الآن</button>
