--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <h3>PUBG Mobile</h3>
     </div>
     <div class="category-card" onclick="location.href='freefire.html'">
-        <img src="https://cdn.oneesports.gg/cdn-data/2023/06/FreeFireOB40UpdatePatchNotes.jpg" alt="Free Fire">
+        <img src="image/Freefire.png" alt="Free Fire">
         <h3>Free Fire</h3>
     </div>
     <div class="category-card" onclick="location.href='googleplay.html'">
