--- a/freefire.html
+++ b/freefire.html
@@ -6,8 +6,12 @@
 <title>Free Fire - LD شحن</title>
 <style>
   body { font-family: sans-serif; background: #0b0f1a; color: #fff; margin:0; }
-  header, footer { background: #0d1626; padding: 15px; text-align:center; }
-  header a { color: #4db8ff; text-decoration:none; margin:0 10px; }
+  header { background: #0d1626; padding: 15px; display:flex; flex-wrap:wrap; justify-content:space-between; align-items:center; gap:10px; }
+  header nav { display:flex; flex-wrap:wrap; gap:10px; }
+  header nav a { color: #4db8ff; text-decoration:none; }
+  .lang-switch { display:flex; gap:5px; }
+  .lang-switch button { background:none; border:none; color:#4db8ff; cursor:pointer; font-weight:bold; }
+  footer { background: #0d1626; padding: 15px; text-align:center; }
   h1 { color: #4db8ff; text-align: center; }
   .offers { display:grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap:15px; padding:20px; }
   .offer { background: #101a33; border: 1px solid #223; padding:10px; text-align:center; border-radius:8px; }
@@ -17,36 +21,46 @@
   button { background: #4db8ff; color:#000; border: none; padding: 8px 15px; cursor:pointer; border-radius:5px; }
   form { display:none; background: #0d1626; padding: 15px; border-radius: 6px; margin-top: 10px; }
   input, select { width:100%; padding:8px; margin:5px 0; }
+  @media (max-width:600px){
+    header { flex-direction:column; align-items:flex-start; }
+  }
 </style>
 </head>
 <body>
 
 <header>
-  <a href="index.html">الرئيسية</a>
-  <a href="pubg.html">PUBG</a>
-  <a href="freefire.html">Free Fire</a>
-  <a href="googleplay.html">Google Play</a>
-  <a href="itunes.html">iTunes</a>
+  <nav>
+    <a href="index.html" data-i18n="nav-home">الرئيسية</a>
+    <a href="pubg.html" data-i18n="nav-pubg">PUBG</a>
+    <a href="freefire.html" data-i18n="nav-freefire">Free Fire</a>
+    <a href="googleplay.html" data-i18n="nav-googleplay">Google Play</a>
+    <a href="itunes.html" data-i18n="nav-itunes">iTunes</a>
+  </nav>
+  <div class="lang-switch">
+    <button data-lang="ar">🇲🇷 العربية</button>
+    <button data-lang="fr">🇫🇷 Français</button>
+    <button data-lang="en">🇺🇸 English</button>
+  </div>
 </header>
 
-<h1>Free Fire - ألماس</h1>
+<h1 data-i18n="freefire-title">Free Fire - ألماس</h1>
 
 <section class="offers">
   <div class="offer">
     <img src="image/Freefire.jpg" alt="100 Diamonds">
     <h3>100 Diamonds</h3>
-    <p>السعر: 50 أوقية</p>
-    <button onclick="showForm(this, 'Free Fire', '100 Diamonds')">اطلب الآن</button>
+    <p><span data-i18n="price">السعر:</span> 50 أوقية</p>
+    <button data-i18n="order" onclick="showForm(this, 'Free Fire', '100 Diamonds')">اطلب الآن</button>
     <form>
-      <input type="text" placeholder="ID اللاعب" class="uid">
-      <input type="text" placeholder="رقم واتسابك" class="whats">
+      <input type="text" placeholder="ID اللاعب" class="uid" data-i18n-placeholder="player-id">
+      <input type="text" placeholder="رقم واتسابك" class="whats" data-i18n-placeholder="whats">
       <select class="pay">
         <option value="بنكيلي">بنكيلي</option>
         <option value="السداد">السداد</option>
         <option value="مصرفي">مصرفي</option>
       </select>
       <input type="file" class="receipt">
-      <button type="button" onclick="sendOrder(this)">إرسال الطلب</button>
+      <button type="button" data-i18n="send" onclick="sendOrder(this)">إرسال الطلب</button>
       <p class="status"></p>
     </form>
   </div>
@@ -54,18 +68,18 @@
   <div class="offer">
     <img src="image/Freefire.jpg" alt="310 Diamonds">
     <h3>310 Diamonds</h3>
-    <p>السعر: 145 أوقية</p>
-    <button onclick="showForm(this, 'Free Fire', '310 Diamonds')">اطلب الآن</button>
+    <p><span data-i18n="price">السعر:</span> 145 أوقية</p>
+    <button data-i18n="order" onclick="showForm(this, 'Free Fire', '310 Diamonds')">اطلب الآن</button>
     <form>
-      <input type="text" placeholder="ID اللاعب" class="uid">
-      <input type="text" placeholder="رقم واتسابك" class="whats">
+      <input type="text" placeholder="ID اللاعب" class="uid" data-i18n-placeholder="player-id">
+      <input type="text" placeholder="رقم واتسابك" class="whats" data-i18n-placeholder="whats">
       <select class="pay">
         <option value="بنكيلي">بنكيلي</option>
         <option value="السداد">السداد</option>
         <option value="مصرفي">مصرفي</option>
       </select>
       <input type="file" class="receipt">
-      <button type="button" onclick="sendOrder(this)">إرسال الطلب</button>
+      <button type="button" data-i18n="send" onclick="sendOrder(this)">إرسال الطلب</button>
       <p class="status"></p>
     </form>
   </div>
@@ -73,18 +87,18 @@
   <div class="offer">
     <img src="image/Freefire.jpg" alt="520 Diamonds">
     <h3>520 Diamonds</h3>
-    <p>السعر: 235 أوقية</p>
-    <button onclick="showForm(this, 'Free Fire', '520 Diamonds')">اطلب الآن</button>
+    <p><span data-i18n="price">السعر:</span> 235 أوقية</p>
+    <button data-i18n="order" onclick="showForm(this, 'Free Fire', '520 Diamonds')">اطلب الآن</button>
     <form>
-      <input type="text" placeholder="ID اللاعب" class="uid">
-      <input type="text" placeholder="رقم واتسابك" class="whats">
+      <input type="text" placeholder="ID اللاعب" class="uid" data-i18n-placeholder="player-id">
+      <input type="text" placeholder="رقم واتسابك" class="whats" data-i18n-placeholder="whats">
       <select class="pay">
         <option value="بنكيلي">بنكيلي</option>
         <option value="السداد">السداد</option>
         <option value="مصرفي">مصرفي</option>
       </select>
       <input type="file" class="receipt">
-      <button type="button" onclick="sendOrder(this)">إرسال الطلب</button>
+      <button type="button" data-i18n="send" onclick="sendOrder(this)">إرسال الطلب</button>
       <p class="status"></p>
     </form>
   </div>
@@ -92,18 +106,18 @@
   <div class="offer">
     <img src="image/Freefire.jpg" alt="1060 Diamonds">
     <h3>1060 Diamonds</h3>
-    <p>السعر: 460 أوقية</p>
-    <button onclick="showForm(this, 'Free Fire', '1060 Diamonds')">اطلب الآن</button>
+    <p><span data-i18n="price">السعر:</span> 460 أوقية</p>
+    <button data-i18n="order" onclick="showForm(this, 'Free Fire', '1060 Diamonds')">اطلب الآن</button>
     <form>
-      <input type="text" placeholder="ID اللاعب" class="uid">
-      <input type="text" placeholder="رقم واتسابك" class="whats">
+      <input type="text" placeholder="ID اللاعب" class="uid" data-i18n-placeholder="player-id">
+      <input type="text" placeholder="رقم واتسابك" class="whats" data-i18n-placeholder="whats">
       <select class="pay">
         <option value="بنكيلي">بنكيلي</option>
         <option value="السداد">السداد</option>
         <option value="مصرفي">مصرفي</option>
       </select>
       <input type="file" class="receipt">
-      <button type="button" onclick="sendOrder(this)">إرسال الطلب</button>
+      <button type="button" data-i18n="send" onclick="sendOrder(this)">إرسال الطلب</button>
       <p class="status"></p>
     </form>
   </div>
@@ -111,27 +125,26 @@
   <div class="offer">
     <img src="image/Freefire.jpg" alt="2180 Diamonds">
     <h3>2180 Diamonds</h3>
-    <p>السعر: 920 أوقية</p>
-    <button onclick="showForm(this, 'Free Fire', '2180 Diamonds')">اطلب الآن</button>
+    <p><span data-i18n="price">السعر:</span> 920 أوقية</p>
+    <button data-i18n="order" onclick="showForm(this, 'Free Fire', '2180 Diamonds')">اطلب الآن</button>
     <form>
-      <input type="text" placeholder="ID اللاعب" class="uid">
-      <input type="text" placeholder="رقم واتسابك" class="whats">
+      <input type="text" placeholder="ID اللاعب" class="uid" data-i18n-placeholder="player-id">
+      <input type="text" placeholder="رقم واتسابك" class="whats" data-i18n-placeholder="whats">
       <select class="pay">
         <option value="بنكيلي">بنكيلي</option>
         <option value="السداد">السداد</option>
         <option value="مصرفي">مصرفي</option>
       </select>
       <input type="file" class="receipt">
-      <button type="button" onclick="sendOrder(this)">إرسال الطلب</button>
+      <button type="button" data-i18n="send" onclick="sendOrder(this)">إرسال الطلب</button>
       <p class="status"></p>
     </form>
   </div>
 </section>
 
-<footer>
-  <p>© 2025 LD Top-Up | واتساب الدعم: +22241380130</p>
-</footer>
+<footer data-i18n="footer">© 2025 LD Top-Up | واتساب الدعم: +22241380130</footer>
 
+<script src="lang.js"></script>
 <script>
 let selectedCat = '', selectedOffer = '';
 
@@ -151,7 +164,7 @@ function sendOrder(btn){
   const status = form.querySelector('.status');
 
   if(!whats || !file){
-    status.textContent = '⚠️ أدخل رقم واتساب وارفع صورة المعاملة';
+    status.textContent = translationsMap['warn'][currentLang];
     return;
   }
 
@@ -166,9 +179,9 @@ function sendOrder(btn){
     method: 'POST',
     body: formData
   }).then(r=>{
-    status.textContent = '✅ تم إرسال الطلب بنجاح';
+    status.textContent = translationsMap['success'][currentLang];
   }).catch(e=>{
-    status.textContent = '❌ حصل خطأ في الإرسال';
+    status.textContent = translationsMap['error'][currentLang];
   });
 }
 </script>
