--- a/pubg.html
+++ b/pubg.html
@@ -8,9 +8,13 @@
   body { font-family: sans-serif; background: #0d0d0d; color: #fff; margin:0; }
   header { background: #1a1a1a; padding: 15px; display:flex; flex-wrap:wrap; justify-content:space-between; align-items:center; gap:10px; }
   header nav { display:flex; flex-wrap:wrap; gap:10px; }
-  header nav a { color: gold; text-decoration:none; }
-  .lang-switch { display:flex; gap:5px; }
-  .lang-switch button { background:none; border:none; color:gold; cursor:pointer; font-weight:bold; }
+  header nav a { color: gold; text-decoration:none; border:2px solid gold; padding:5px 10px; border-radius:5px; }
+  header nav a:hover { background:#333; }
+  .lang-switch { position:relative; }
+  #lang-toggle { background:none; border:2px solid gold; color:gold; cursor:pointer; font-weight:bold; padding:5px 10px; border-radius:5px; }
+  .lang-menu { display:none; position:absolute; top:100%; right:0; background:#1a1a1a; border:1px solid #333; border-radius:5px; }
+  .lang-menu button { display:block; width:100%; background:none; border:none; color:gold; cursor:pointer; padding:5px 10px; text-align:left; }
+  .lang-menu button:hover { background:#333; }
   footer { background: #1a1a1a; padding: 15px; text-align:center; }
   h1 { color: gold; text-align: center; }
   .offers { display:grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap:15px; padding:20px; }
@@ -35,9 +39,12 @@
     <a href="itunes.html" data-i18n="nav-itunes">iTunes</a>
   </nav>
   <div class="lang-switch">
-    <button data-lang="ar">🇲🇷 العربية</button>
-    <button data-lang="fr">🇫🇷 Français</button>
-    <button data-lang="en">🇺🇸 English</button>
+    <button id="lang-toggle">🌐</button>
+    <div class="lang-menu">
+      <button data-lang="ar">🇲🇷 العربية</button>
+      <button data-lang="fr">🇫🇷 Français</button>
+      <button data-lang="en">🇺🇸 English</button>
+    </div>
   </div>
 </header>
 
