Add translation support for category titles

--- a/index.html
+++ b/index.html
@@ -166,19 +166,19 @@
 <section class="categories">
     <div class="category-card" onclick="location.href='pubg.html'">
         <img src="image/UC.jpg" alt="PUBG Mobile">
-        <h3>PUBG Mobile</h3>
+        <h3 data-i18n="cat-pubg">PUBG Mobile</h3>
     </div>
     <div class="category-card" onclick="location.href='freefire.html'">
         <img src="image/Freefire.png" alt="Free Fire">
-        <h3>Free Fire</h3>
+        <h3 data-i18n="cat-freefire">Free Fire</h3>
     </div>
     <div class="category-card" onclick="location.href='googleplay.html'">
         <img src="image/Googleplay.jpg" alt="Google Play">
-        <h3>Google Play</h3>
+        <h3 data-i18n="cat-googleplay">Google Play</h3>
     </div>
     <div class="category-card" onclick="location.href='itunes.html'">
         <img src="image/Itunes.jpg" alt="iTunes">
-        <h3>iTunes</h3>
+        <h3 data-i18n="cat-itunes">iTunes</h3>
     </div>
 </section>
 
